# database_engine

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  example.py  pyproject.toml  requirements.txt
dbcsv/: __init__.py
dbcsv/dbapi2/: Dockerfile  __init__.py  connection.py  cursor.py  exceptions.py  setting.py  utils.py
dbcsv/engine/: Dockerfile  dependencies.py  exceptions.py  main.py  setting.py
dbcsv/engine/api/: query.py  security.py
dbcsv/engine/query/: __init__.py  executor.py  lexical_analysis.py  semantic_analysis.py  syntactic_analysis.py
dbcsv/engine/relational/: __init__.py  datatype.py  schema.py  table.py
dbcsv/engine/schemas/: sql_request.py
dbcsv/engine/security/: auth.py
dbcsv/engine/storage/testing/: metadata.yaml
tests/dbapi2/: test_dbapi2.py
tests/engine/query/: test_lexical_analysis.py  test_semantic_analysis.py  test_syntactic_analysis.py
tests/engine/relational/: test_datatype.py  test_schema.py  test_table.py
tests/engine/security/: auth.py
